[package]
name = "ble-mesh"
version = "0.1.0"
authors = ["Mattia Fiumara <mattiafiumara@gmail.com>"]
license = "MIT"
edition = "2018"
description = "A rust bluetooth mesh implementation, designed for interoperability with other bluetooth mesh stacks."
readme = "README.md"
repository = "https://github.com/mfiumara/ble-mesh"

[dependencies]
# serde = "*"