[package]
name = "ble-mesh"
version = "0.1.1"
authors = ["Mattia Fiumara <mattiafiumara@gmail.com>"]
license = "Apache-2.0"
edition = "2018"
description = "A rust bluetooth mesh implementation, designed for interoperability with other bluetooth mesh stacks."
readme = "README.md"
repository = "https://github.com/mfiumara/ble-mesh"

[dependencies]
# bitflags = "*"
# bitvec = "*"
# Dependencies that we might need
# serde = "*"
# async_std = "*"
# rand = "*"
[build-dependencies]
bindgen = "0.54.1"
pkg-config = "0.3.18"
autotools = "0.2.1"
# cc = "*"